package session_12_abstraction.sistem_gestiune_angajati;

public interface ManagementSkills {
    void leadTeam();

    void conductMeetings();
}
