package session_12_abstraction.sistem_gestiune_angajati;

public interface ProgrammingSkills {
    void writeCode();

    void debugCode();
}
